Refactor tenant middleware registration and improve development handling
- Removed redundant registration of TenantMiddleware in Program.cs files for ApiGateway and IncidentService, as it is now handled via UseMiddleware.
- Updated PrimaryServiceId parsing to allow null values in IncidentService.
- Added Grpc.Net.Client package reference to IncidentScope.Contracts.csproj.
- Upgraded Npgsql and Npgsql.EntityFrameworkCore.PostgreSQL package versions to 8.0.4.
- Updated OpenTelemetry packages to version 1.9.0 and added a FrameworkReference for Microsoft.AspNetCore.App.
- Enhanced TenantMiddleware to use a default tenant ID in development if the x-tenant-id header is missing.
- Configured default tenant ID in frontend's next.config.js for development purposes.

--- a/backend/src/Shared/Contracts/IncidentScope.Contracts.csproj
+++ b/backend/src/Shared/Contracts/IncidentScope.Contracts.csproj
@@ -6,6 +6,7 @@
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.25.1" />
     <PackageReference Include="Grpc.Tools" Version="2.59.0" PrivateAssets="All" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.59.0" />
     <Protobuf Include="../../../../proto/incidentscope/*.proto" GrpcServices="Server,Client" />
   </ItemGroup>
 </Project>
