--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,47 +8,70 @@ on:
 
 jobs:
   backend-build:
+    name: Backend Build & Test
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
-      
-      - name: Restore dependencies
-        run: dotnet restore backend/src/**/*.csproj
-      
-      - name: Build
-        run: dotnet build backend/src/**/*.csproj --no-restore
-      
-      - name: Test
-        run: dotnet test backend/tests/**/*.csproj --no-build --verbosity normal || true
+
+      # ---- Restore ----
+      - name: Restore ApiGateway
+        run: dotnet restore backend/src/ApiGateway/IncidentScope.ApiGateway.csproj
+
+      - name: Restore IncidentService
+        run: dotnet restore backend/src/IncidentService/IncidentScope.IncidentService.csproj
+
+      # ---- Build ----
+      - name: Build ApiGateway
+        run: dotnet build backend/src/ApiGateway/IncidentScope.ApiGateway.csproj --no-restore --configuration Release
+
+      - name: Build IncidentService
+        run: dotnet build backend/src/IncidentService/IncidentScope.IncidentService.csproj --no-restore --configuration Release
+
+      # ---- Test ----
+      - name: Test ApiGateway
+        run: dotnet test backend/src/ApiGateway/IncidentScope.ApiGateway.csproj --no-build --configuration Release --verbosity normal
+
+      - name: Test IncidentService
+        run: dotnet test backend/src/IncidentService/IncidentScope.IncidentService.csproj --no-build --configuration Release --verbosity normal
 
   frontend-build:
+    name: Frontend Build
     runs-on: ubuntu-latest
+    needs: backend-build
+
     steps:
-      - uses: actions/checkout@v4
-      
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
-          cache: 'pnpm'
-      
-      - name: Install pnpm
-        run: npm install -g pnpm
-      
-      - name: Install dependencies
-        run: cd frontend && pnpm install
-      
-      - name: Lint
-        run: cd frontend && pnpm lint || true
-      
-      - name: Type check
-        run: cd frontend && pnpm type-check || true
-      
-      - name: Build
-        run: cd frontend && pnpm build
+          node-version: 18
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8
+
+      - name: Install dependencies
+        working-directory: frontend
+        run: pnpm install --frozen-lockfile
+
+      - name: Lint
+        working-directory: frontend
+        run: pnpm lint
+
+      - name: Type check
+        working-directory: frontend
+        run: pnpm type-check
+
+      - name: Build
+        working-directory: frontend
+        run: pnpm build
