Enhance Swagger configuration and API security
- Added security definition for 'x-tenant-id' in Swagger for both ApiGateway and IncidentService, requiring it as a header for all requests.
- Updated Swagger UI configuration to enable persistent authorization in development mode.
- Modified SQL query parameterization in IncidentService to use positional parameters for improved security.
- Removed API rewrites in frontend configuration, transitioning to API routes for better header forwarding.
- Updated Docker Compose to mount the OpenTelemetry collector configuration as read-only.
- Changed logging configuration in OpenTelemetry to use 'debug' instead of 'logging' for better verbosity control.

--- a/scripts/local/config/otel-collector-config.yaml
+++ b/scripts/local/config/otel-collector-config.yaml
@@ -44,21 +44,21 @@ exporters:
     topic: "otel.traces"
     encoding: "otlp_proto"
 
-  logging:
-    loglevel: info
+  debug:
+    verbosity: normal
 
 service:
   pipelines:
     logs:
       receivers: [otlp]
       processors: [memory_limiter, resource, attributes, batch]
-      exporters: [kafka/logs, logging]
+      exporters: [kafka/logs, debug]
     metrics:
       receivers: [otlp]
       processors: [memory_limiter, resource, attributes, batch]
-      exporters: [kafka/metrics, logging]
+      exporters: [kafka/metrics, debug]
     traces:
       receivers: [otlp]
       processors: [memory_limiter, resource, attributes, batch]
-      exporters: [kafka/traces, logging]
+      exporters: [kafka/traces, debug]
 
