--- a/scripts/local/docker-compose.yml
+++ b/scripts/local/docker-compose.yml
@@ -87,7 +87,7 @@ services:
     container_name: incidentscope-otel-collector
     command: ["--config=/etc/otel-collector-config.yaml"]
     volumes:
-      - ../config/otel-collector-config.yaml:/etc/otel-collector-config.yaml
+      - ./config/otel-collector-config.yaml:/etc/otel-collector-config.yaml:ro
     ports:
       - "4317:4317"   # OTLP gRPC receiver
       - "4318:4318"   # OTLP HTTP receiver
